Change log for Test::Pod

1.51

1.50  2015-05-28T21:42:48Z
    * Restored support for ignoring directories listed in
      `%Test::Pod::ignore_dirs`, inadvertently dropped by the switch to
      File::Find in v1.46. Thanks to Julien ÉLIE for the report and diagnosis!

1.49  2015-05-12T17:30:58Z
    * Changed license in the README to "Same as Perl" to match the license
      listed in `META.yml`, and in the POD as of v1.42.
    * Tightened up the heuristic for matching Perl batch files to require
      that the file end in `.bat`, as described in the documentation.
      Patch from Luca Ferrari.
    * Simplified some of the matching code. Patch from Luca Ferrari.
    * Transferred ownership of the repository to the perl-pod organization on
      GitHub.
    * Removed the Pod testing test from the distribution. Seems silly for a
      module designed for testing Pod, right? But it's considered best
      practice to do Pod testing in development only, not in a release.

1.48 - 2013-05-06T04:47:00Z
    * Fixed test failure with versions of Pod::Simple lower than 3.24. Thanks
      to Martin Holste and Tatsuhiko Miyagawa for the reports.

1.47 - 2013-05-05T03:14:25Z
    * Fixed failing test on Pod::Simple 3.27 and higher.

1.46 - 2013-02-16T19:46:17Z
    * Fixed a crash when `all_pod_files_ok()` finds no files to test. Thanks
      to H.Merijn Brand.
    * Switched from custom file searching code to File::Find. Suggested by
      H.Merijn Brand.
    * Fixed failing test on Pod::Simple 3.24.

1.45 - 2011-03-09T20:00:59
    * Removed Module::Build from `build_requires`, since it does nothing
      out-of-the ordinary, and this keeps it out of the `Makefile.PL`'s
      `PM_PREREQ`. Per gripe from Peter Scott.

1.44 - 2010-04-26T17:33:02
    * Restored the `Makefile.PL` by using Module::Build::Compat's
      "traditional" configuration.

1.43 - 2010-04-21T02:33:59
    * Reduced prereq for Test::More to 0.62, prereq for Pod::Simple to 3.05,