@@ -1,13 +1,20 @@
-/_build
-/blib
--*
+!/.gitignore
+/Makefile
+/Makefile.old
 /MANIFEST
 /MANIFEST.bak
-/*META.*
-/Build
-/Makefile*
+/MANIFEST.SKIP.bak
+/META.*
+/MYMETA.*
+/MANIFEST
 /pm_to_blib
-/Test-Pod-*
+/blib/
+/_eumm/
+/Build.PL
+/Build
+-*
+/Test-Pod-*/
+/Test-Pod-*.tar.gz
 *.rpm
 /_rpmbuild
 /target
