@@ -8,10 +8,10 @@ INSTALLATION
 
 To install this module, type the following:
 
-    perl Build.PL
-    ./Build
-    ./Build test
-    ./Build install
+    perl Makefile.PL
+    make
+    make test
+    make install
 
 Dependencies
 ------------
